[package]
name = "ten-k-balls"
description = "A bevy rapier project with wasm-pack"
repository = "https://github.com/mitulagr2/"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy = { version = "0.11.3" }
bevy_rapier2d = "0.22.0"
wasm-bindgen = "0.2.87"

[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"
